--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
     <p>1. git init</p>
     <p>2. git add .</p>
     <p>3. git commit dan push</p>
+    <h1>git branch</h1>
+    <p>1. git branch "nama_branch" </p>
+    <p>2. git checkout -b "nama_branch</p>
+    <p>3. git merge "nama_branch" => untuk memindahkan branch ke main/master</p>
+    <p>4. git push</p>
 </body>
 </html>
