--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <p>2. git checkout -b "nama_branch</p>
     <p>3. git merge "nama_branch" => untuk memindahkan branch ke main/master</p>
     <p>4. git push</p>
+    <P>udah gitu aja</P>
 </body>
 </html>
