--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Binarku</title>
 </head>
 <body>
-    <h1>git</h1>
+    <h1>git.</h1>
     <p>1. git init</p>
     <p>2. git add .</p>
     <p>3. git commit dan push</p>
