--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <p>3. git merge "nama_branch" => untuk memindahkan branch ke main/master</p>
     <p>4. git push</p>
     <P>udah gitu aja</P>
-    <P>udah gitu aja</P>
+    <P>udah stop</P>
 </body>
 </html>
